updated multiple linear regression

--- a/ML_PYTHON/2_linear_regression_multivariate.ipynb
+++ b/ML_PYTHON/2_linear_regression_multivariate.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Multiple Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Below is the table containing home prices in monroe twp, New Jersey(USA). Here price depends on **area (square feet), bed rooms and age of the home (in years)**. Given these prices we have to predict prices of new homes based on area, bed rooms and age."
    ]
   },
@@ -51,10 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#load required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn import linear_model"
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -157,6 +165,7 @@
     }
    ],
    "source": [
+    "#Read dataset\n",
     "df = pd.read_csv('datasets/2_homeprices.csv')\n",
     "df"
    ]
