update second save and load model notebook

--- a/ML_PYTHON/4_save_and_load_model_using_pickle.ipynb
+++ b/ML_PYTHON/4_save_and_load_model_using_pickle.ipynb
@@ -9,12 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "# Disable HTML representation for scikit-learn models\n",
+    "import sklearn\n",
+    "sklearn.set_config(display='text')"
    ]
   },
   {
@@ -541,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
