modified linear regression and create the one hot encoding notebook

--- a/ML_PYTHON/1_Simple linear regression.ipynb
+++ b/ML_PYTHON/1_Simple linear regression.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,8 @@
     "# Initialize model\n",
     "model = linear_model.LinearRegression()\n",
     "# Fitting data to model\n",
-    "model.fit(df[['area']], df['price']) #x=area, y=price"
+    "model.fit(df[['area']], df['price']) #x=area, y=price\n",
+    "print(\"Model fitted successfully\")"
    ]
   },
   {
